--- a/SRC/CSS/animation.css
+++ b/SRC/CSS/animation.css
@@ -97,3 +97,93 @@
 }
 
 /* HEADER-CARDS-ANIMATION */
+
+/* MAIN-SERVICES */
+
+.main-services-little-circles {
+    animation: lit-ci 1s ease;
+    animation-delay: 0s;
+}
+
+@keyframes lit-ci {
+    0% {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50% );
+    }
+}
+
+.main-service-buttons-text-container1 {
+    animation: container1 1s ease;
+    animation-delay: 0s;
+
+}
+
+@keyframes container1 {
+    0%{
+        top: 5%;
+        left: -3%;
+    }
+}
+.main-service-buttons-text-container2 {
+    animation: container2 1s ease;
+    animation-delay: 0s;
+}
+
+@keyframes container2 {
+    0%{
+        top: 5%;
+        left: 69%;
+    }
+}
+
+.main-service-buttons-text-container3 {
+    animation: container3 1s ease;
+    animation-delay: 0s;
+}
+
+@keyframes container3 {
+    0%{
+        left: -5%;
+    }
+}
+
+.main-service-buttons-text-container4 {
+    animation: container4 1s ease;
+    animation-delay: 0s;
+}
+
+@keyframes container4 {
+    0%{
+        left: 72%;
+    }
+}
+
+.main-service-buttons-text-container5 {
+    animation: container5 1s ease;
+    animation-delay: 0s;
+}
+
+@keyframes container5 {
+    0%{
+        top: 70%;
+        left: -3%;
+    }
+}
+
+.main-service-buttons-text-container6 {
+    animation: container6 1s ease;
+    animation-delay: 0s;
+    
+    top: 65%;
+    left: 62%;
+}
+
+@keyframes container6 {
+    0%{
+        top: 70%;
+        left: 67%;
+    }
+}
+
+/* MAIN-SERVICES */
