--- a/SRC/CSS/desktop.css
+++ b/SRC/CSS/desktop.css
@@ -448,9 +448,8 @@
 
 .main-services-title {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    text-align: center;
 }
 
 .main-services-title-text {
@@ -467,58 +466,79 @@
 }
 
 .main-services-tooth-container {
+    position: relative;
+    top: 10%;
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 .main-services-tooth-img-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .main-services-tooth-img-radius {
-    margin-top: 50px;
-    width: 330px;
-    height: 335px;
+    position: absolute;
+    width: 350px;
+    height: 350px;
     border: 1px solid black;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.main-services-tooth-img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .main-services-buttons-container {
-    width: 330px;
-    position: absolute; 
-}
-
-.main-services-buttons-box1 {
-    padding-left: 50px;
-    padding-bottom: 110px;
-    width: 280px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-services-buttons-box2 {
-    margin-left: -10px;
-    padding-bottom: 110px;
     width: 350px;
-    display: flex;
-    justify-content: space-between;
+    height: 350px;
+    position: relative;
 }
 
-.main-services-buttons-box3 {
-    padding-left: 50px;
-    padding-bottom: -120px;
-    width: 280px;
-    display: flex;
-    justify-content: space-between;
+.main-services-little-circle-1 {
+    position: absolute;
+    top: 8%;
+    left: 15%;
 }
 
-.main-services-plus {
+.main-services-little-circle-2 {
+    position: absolute;
+    top: 8%;
+    left: 78%;
+}
+.main-services-little-circle-3 {
+    position: absolute;
+    top: 45%;
+    left: -2.5%;
+}
+.main-services-little-circle-4 {
+    position: absolute;
+    top: 45%;
+    left: 95%;
+}
+.main-services-little-circle-5 {
+    position: absolute;
+    top: 85%;
+    left: 15%;
+}
+
+.main-services-little-circle-6 {
+    position: absolute;
+    top: 85%;
+    left: 78%;
+}
+
+.main-services-little-circles {
     width: 24px;
     height: 24px;
     background-color: #46B1DE;
@@ -531,21 +551,8 @@
 
 .main-service-buttons-text-container {
     width: 100%;
+    height: 600px;
     position: absolute;
-    
-}
-
-.main-service-buttons-text-container1 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-service-buttons-text-box1 {
-    text-align: right;
-    width: 350px;
-    margin-left: 80px;
-    padding: 10px;
 }
 
 .main-service-buttons-text-box-title {
@@ -571,6 +578,19 @@
 
 }
 
+.main-service-buttons-text-container1 {
+    position: absolute;
+    top: 10%;
+    left: 2%;
+}
+
+.main-service-buttons-text-box1 {
+    text-align: right;
+    width: 350px;
+    margin-left: 80px;
+    padding: 10px;
+}
+
 .main-service-buttons-text-box-para-right {
     padding: 5px;
     font-family: 'Roboto';
@@ -591,18 +611,24 @@
     padding: 10px;
 }
 
-
 .main-service-buttons-text-container2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: absolute;
+    top: 10%;
+    left: 62%;
 }
+
 .main-service-buttons-text-box3 {
     text-align: right;
     width: 350px;
     margin-top: 50px;
     margin-left: 40px;
     padding: 10px;
+}
+
+.main-service-buttons-text-container3 {
+    position: absolute;
+    top: 33%;
+    left: 0%;
 }
 
 .main-service-buttons-text-box4 {
@@ -613,10 +639,10 @@
     padding: 10px;
 }
 
-.main-service-buttons-text-container3 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.main-service-buttons-text-container4 {
+    position: absolute;
+    top: 33%;
+    left: 67%;
 }
 
 .main-service-buttons-text-box5 {
@@ -627,12 +653,24 @@
     padding: 10px;
 }
 
+.main-service-buttons-text-container5 {
+    position: absolute;
+    top: 65%;
+    left: 2%;
+}
+
 .main-service-buttons-text-box6 {
     text-align: left;
     width: 350px;
     margin-top: 50px;
     margin-right: 100px;
     padding: 10px;
+}
+
+.main-service-buttons-text-container6 {
+    position: absolute;
+    top: 65%;
+    left: 62%;
 }
 
 .main-services-attention-container {
