--- a/SRC/CSS/tablet.css
+++ b/SRC/CSS/tablet.css
@@ -1,4 +1,6 @@
 @media (max-width: 1180px){
+
+
     .header-menu-container {
         display: flex;
         justify-content: center;
@@ -7,6 +9,7 @@
 
     .main-service-buttons-text-container {
         position: relative;
+        display: none;
     }
 }
 
@@ -78,3 +81,118 @@
     }
 }
 
+@media (max-width: 768px) {
+    /* BURGER */
+
+    .burger {
+        cursor: pointer;
+        padding-bottom: 5px;
+        padding-right: 10px;
+        position: relative;
+        margin: 10px;
+      }
+      
+      .burger span{
+        position: absolute;
+        width: 15px;
+        height: 2px;
+        background-color: black;
+        transition: 0.5s;
+      }
+
+      .burger.open span{
+        background: transparent;
+        transform: rotate(180deg);
+      }
+
+      .burger.open span::before {
+        transform: rotate(45deg);
+        top: -5%;
+        background-color: #46B1DE;
+      }
+
+      .burger.open span::after {
+        transform: rotate(-45deg);
+        top: 5%;
+        background-color: #46B1DE;
+      }
+      
+      .burger span::before {
+        content: "";
+        position: absolute;
+        top: -5px;
+      
+        width: 15px;
+        height: 2px;
+        background-color: black;
+
+        transition: 0.5s;
+      }
+      
+      .burger span::after {
+        content: "";
+        position: absolute;
+        top: 5px;
+      
+        width: 15px;
+        height: 2px;
+        background-color: black;
+        
+        transition: 0.5s;
+      }
+      
+
+
+    /* BURGER */
+
+
+    .header-menu-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header-logo-container {
+        max-width: 183px;
+        height: 39.16px;
+        display: flex;
+        align-items: center;
+    }
+
+    .header-logo {
+        width: 33.39px;
+        height: 34.67px;
+    }
+
+    .header-logo-text-container {
+        padding: 0px 3px;
+        max-height: 39px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .header-logo-text {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 140%;
+        color: #46B1DE; 
+    }
+
+    .header-logo-under-text {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 11.5564px;
+        line-height: 140%;
+        color: #46B1DE;
+    }
+
+
+    .header-navbar-container {
+        display: none;
+    }
+
+
+}
